--- a/index.html
+++ b/index.html
@@ -10,11 +10,28 @@
 </head>
 <body>
     <header class="cabecalho">
-        <span class="cabecalho_menu-hamburguer"></span>
-        <img src="./img/Polygon 1 (Stroke).png" alt="">
+        <div class="container">
+        <span class="cabecalho_menu-hamburguer container--image"></span>
+        <img src="./img/Polygon 1 (Stroke).png" alt="logo" class="container--image">
+        <div>
+        </div class="container">
         <a href="#"><img src="./img/Favoritos.svg" alt=""></a>
         <a href="#"><img src="./img/Sacola.png" alt=""></a>
         <a href="#"><img src="./img/Usuário.svg" alt=""></a>
+        </div>
+        <!-- </ul>
+            <li>Categorias</li>
+            <li>COMBUSTÃO</li>
+            <li>COMBUSTÍVEIS FOSSEIS</li>
+            <li>ENERGIAS RENOVÁVEIS</li>
+            <li>PLÁSTICO MENOS POLUENTE</li>
+            <li>ENERGIA SOLAR</li>
+            <li>ENERGIA ELÉTRICA (SOM)</li>
+            <li>ENERGIA ELÉTRICA (FOTOSSINTESE)</li>
+            <li>ENERGIA ELÉTRICA (LIXO)</li>
+            <li>JOGOS</li>
+            <li>CUSTO DE ENERGIA LIMPA</li>
+        </ul> -->
     </header>
     
 </body>
