--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <header class="cabecalho">
         <div class="container">
         <span class="cabecalho_menu-hamburguer container--image"></span>
+        </ul>
+            <li class="lista-menu__item">Categorias</li>
+            <li class="lista-menu__item"><a href="">COMBUSTÃO</a> </li>
+            <li class="lista-menu__item"><a href="">COMBUSTÍVEIS FOSSEIS</a></li>
+            <li class="lista-menu__item"><a href="">ENERGIAS RENOVÁVEIS</a></li>
+            <li class="lista-menu__item"><a href="">PLÁSTICO MENOS POLUENTE</a></li>
+            <li class="lista-menu__item"><a href="">ENERGIA SOLAR</a></li>
+            <li class="lista-menu__item"><a href="">ENERGIA ELÉTRICA (SOM)</a></li>
+            <li class="lista-menu__item"><a href="">ENERGIA ELÉTRICA (FOTOSSINTESE)</a></li>
+            <li class="lista-menu__item"><a href="">ENERGIA ELÉTRICA (LIXO)</a></li>
+            <li class="lista-menu__item"><a href="">JOGOS</a></li>
+            <li class="lista-menu__item"><a href="">CUSTO DE ENERGIA LIMPA</a></li>
+        </ul>
         <img src="./img/Polygon 1 (Stroke).png" alt="logo" class="container--image">
         <div>
         </div class="container">
@@ -19,19 +32,7 @@
         <a href="#"><img src="./img/Sacola.png" alt=""></a>
         <a href="#"><img src="./img/Usuário.svg" alt=""></a>
         </div>
-        <!-- </ul>
-            <li>Categorias</li>
-            <li>COMBUSTÃO</li>
-            <li>COMBUSTÍVEIS FOSSEIS</li>
-            <li>ENERGIAS RENOVÁVEIS</li>
-            <li>PLÁSTICO MENOS POLUENTE</li>
-            <li>ENERGIA SOLAR</li>
-            <li>ENERGIA ELÉTRICA (SOM)</li>
-            <li>ENERGIA ELÉTRICA (FOTOSSINTESE)</li>
-            <li>ENERGIA ELÉTRICA (LIXO)</li>
-            <li>JOGOS</li>
-            <li>CUSTO DE ENERGIA LIMPA</li>
-        </ul> -->
+        
     </header>
     
 </body>
