--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energia Solar e Eólica</title>
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./estilo.css">
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
@@ -19,7 +19,7 @@
     <div class="container">
         <input type="checkbox" class="container--botao" id="menu">
         <label for="menu">
-            <span class="cabecalho_menu-hamburger container--image"></span>
+            <span class="cabecalho__menu-hamburger container--imagem"></span>
 
         </label>
        <ul class="lista-menu">
@@ -27,39 +27,39 @@
             Categorias
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Combustão</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Combustão</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Combustíveis Fosseis</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Combustíveis Fosseis</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energias Renováveis</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energias Renováveis</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Plástico Menos Poluente</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Plástico Menos Poluente</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Solar</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Solar</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (som)</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (som)</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (Fotossíntese)</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (Fotossíntese)</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (Lixo)</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Energia Elétrica (Lixo)</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Jogos</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Jogos</a>
         </li>
         <li class="lista-menu__item">
-            <a href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Custo de Energia</a>
+            <a class="lista-menu__link" href="ttps://thzn7.github.io/uso.consciente.da.energia/h">Custo de Energia</a>
         </li>
        </ul>
        <img src="./img/Polygon 1 (Stroke).png" alt="logo">
-    </div>
-    <div class="container">
+    
+    
        <a href="#"><img src="./img/Favoritos.svg" alt=""></a>
        <a href="#"><img src="./img/Sacola.png" alt=""></a>
        <a href="#"><img src="./img/Usuário.svg" alt=""></a>
