--- a/index.html
+++ b/index.html
@@ -86,13 +86,31 @@
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
   
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  
+    
     <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
   </div>
+  ,<div class="card">
+    <!-- 1 linha-->
+        <div class="card--decricao">
+            <div class="descricao">
+                <h3 class="descricao--titulo">historia</h3>
+                <h2 class="descricao--titulo">Projeto Multidisciplinar </h2>
+                <p class="descricao--titulo">Projeto sobre o uso consciente da energia</p>
+            <div>
+    <!-- 2 coluna-->
+            <img src="./img/image 30.png" class="descricao--imagem" alt="">
+        </div>
+    <!-- 2 linha-->
+    <div class="card--botoes">
+        <ul class="botoes">
+            <li class="botoes--item"><img src="img/Favoritos.png" alt="">
+            <li class="botoes--item"><img src="img/Sacola.png" alt="">
+        </ul>
+        <!-- 2 coluna-->
+            <a href="#" class="botoes--ancora">Saiba mais</a>
+    </div>
+    </div>
   <section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script >
@@ -114,3 +132,4 @@
     
 </body>
 </html>/
+
