--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
         </li>
        </ul>
        <img src="./img/Polygon 1 (Stroke).png" alt="logo">
+       <h1 class="container--titulo"><b>projeto de quimica</b></h1>
+    <ul class="opcoes"
+    li.opcoes*3
     
+
+
+    </ul>
     
        <a href="#"><img src="./img/Favoritos.svg" alt=""></a>
        <a href="#"><img src="./img/Sacola.png" alt=""></a>
